// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`command: lint lint (and fix) should lint and fix JS entries only: js/bar.js after lint 1`] = `
"console.log('Hello world from \`bar.js\`!');
"
`;

exports[`command: lint lint (and fix) should lint and fix JS entries only: js/bar.js before lint 1`] = `
"console.log('Hello world from \`bar.js\`!');;;
"
`;

exports[`command: lint lint (and fix) should lint and fix Rollup entries only: button/index.js after lint 1`] = `
"import Vue from 'vue';
import Button from './Button';

Vue.component('y-button', Button);

console.log(\\"Hello from index.js!\\");
"
`;

exports[`command: lint lint (and fix) should lint and fix Rollup entries only: button/index.js before lint 1`] = `
"import Vue from 'vue';
import Button from './Button';

Vue.component('y-button', Button);

console.log(\\"Hello from index.js!\\");;;
"
`;
